--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -1865,6 +1865,9 @@ messageDetails:
   bottomSheet:
     title: "Was ist eine dynamische Mitteilung?"
     body: "Die versendende Körperschaft kann den Inhalt dieser Nachricht auch nach dem Versand aktualisieren, um sicherzustellen, dass die Informationen stets korrekt und relevant sind.\n\n Dies geschieht in bestimmten Fällen, wie z. B. bei der Aktualisierung veralteter Informationen oder nicht mehr gültiger Anhänge.\n\n Wenn die Körperschaft dich über neue Informationen oder wichtige Aktualisierungen informieren muss, wird sie dies mittels einer neuen Mitteilung tun."
+  footer:
+    contact: "Absender kontaktieren"
+    showMore: "Mehr anzeigen"
 messagePDFPreview:
   title: "PDF-Vorschau"
   singleBtn: "Speichern oder teilen"
