--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -1869,12 +1869,18 @@ messageDetails:
     title: "Was ist eine dynamische Mitteilung?"
     body: "Die versendende Körperschaft kann den Inhalt dieser Nachricht auch nach dem Versand aktualisieren, um sicherzustellen, dass die Informationen stets korrekt und relevant sind.\n\n Dies geschieht in bestimmten Fällen, wie z. B. bei der Aktualisierung veralteter Informationen oder nicht mehr gültiger Anhänge.\n\n Wenn die Körperschaft dich über neue Informationen oder wichtige Aktualisierungen informieren muss, wird sie dies mittels einer neuen Mitteilung tun."
   footer:
-    contact: "Absender kontaktieren"
-     showMoreData: "Mehr anzeigen"
+    contacts: "Absender kontaktieren"
+    showMoreData: "Mehr anzeigen"
   showMoreDataBottomSheet:
     title: "Identifikationsdaten"
     messageId: "MitteilungsID"
     messageIdAccessibility: "MitteilungsID kopieren"
+  contactsBottomSheet:
+    title: "Hilfe"
+    body: "Wenn du dir über den Inhalt der Nachricht im Unklaren bist, wende dich an die Körperschaft, von der du die Nachricht erhalten hast."
+    actions:
+      call: "Anrufen"
+      email: "E-Mail schreiben"
 messagePDFPreview:
   title: "PDF-Vorschau"
   singleBtn: "Speichern oder teilen"
