--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -1693,6 +1693,8 @@ wallet:
       WAITING_CONFIRMATION_EMAIL:
         title: "Warte auf eine Bestätigung per E-Mail"
         subtitle: "Es war nicht möglich, das Ergebnis der Zahlung zu überprüfen. Wenn sie erfolgreich war, wirst du in Kürze eine E-Mail erhalten. Sollte diese nicht ankommen, kontaktiere bitte den Support."
+        subtitle: "Du erhältst das Ergebnis deiner Zahlung mittels E-Mail an {{email}}."
+        defaultSubtitle: "Du erhältst das Ergebnis deiner Zahlung mittels E-Mail an die verbundene E-Mail-Adresse."
       METHOD_NOT_ENABLED:
         title: "Zahlungsmethode in der App aktivieren"
         subtitle: "Bevor du die Zahlung erneut versuchst, wähle die Zahlungsmethode in deinem Konto aus und aktiviere die Funktion “Zahlungen in der App”."
