--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -2491,10 +2491,13 @@ fastLogin:
   userInteraction:
     sessionExpired:
       noPin:
-        title: "Es ist zu lange her!"        
+        title: "Es ist zu lange her!"
+        subtitle: "Aus Sicherheitsgründen musst du dich erneut mit SPID oder CIE identifizieren. Anschließend kannst du die IO-Konfiguration dort fortfahren, wo du aufgehört hast."
         submitButtonTitle: "Fortfahren"
       continueNavigation:
-        title: "Deine Sitzung ist abgelaufen"        
+        title: "Deine Sitzung ist abgelaufen"
+        subtitle: "Melde dich an, um die App weiter zu nutzen."
+        submitButtonTitle: "Anmelden"
         cancelButtonTitle: "Abbrechen"
       transientError:
         title: "Wir konnten dich nicht authentifizieren"
