--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -745,17 +745,20 @@ email:
   newinsert:
     header: "IO konfigurieren"
     title: "Wie lautet Ihre E-Mail?"
-    subtitle: "Wir verwenden E-Mail für bestimmte Mitteilungen, wie z. B. Zahlungsbelege oder Nachrichten, die mit dem Kundendienst ausgetauscht werden."
+    subtitle: "Sie wird verwendet, um dir Mitteilungen wie Zahlungsbestätigungen oder Support-Nachrichten zu senden."
     label: "Persönliche E-Mail Adresse"
     alert:
-      title: "Die E-Mail {{email}}, die mit Ihrer SPID-Identität verknüpft ist, wird bereits auf IO verwendet, bitte geben Sie eine andere ein."
-      description1: "E-Mail bereits in Gebrauch"
-      modaltitle: "Diese E-Mail ist bereits in Gebrauch"
-      modaldescription: "Dies kann der Fall sein, wenn Sie dieselbe Adresse wie ein Familienmitglied haben"
-      modalbutton: "Andere E-Mail verwenden"
+      title: "{{email}} wird bereits verwendet, bitte gib eine andere ein."
+      description1: "E-Mail-Adresse bereits verwendet"
+      description2: "Gib eine andere E-Mail-Adresse als die aktuelle ein"
+      description3: "Du verwendest diese E-Mail-Adresse bereits"
+      invalidemail: "Gib eine gültige E-Mail-Adresse ein"
+      modaltitle: "Diese E-Mail-Adresse ist bereits verwendet"
+      modaldescription: "Dies kann der Fall sein, wenn du dieselbe Adresse wie ein Familienmitglied hast"
+      modalbutton: "Andere E-Mail-Adresse verwenden"
   edit:
     title: "E-Mail-Adresse bearbeiten"
-    subtitle: "Die zuvor angegebene E-Mail-Adresse lautet"
+    subtitle: "Jetzt benutzt du "
     validated: "Die zuvor angegebene und bestätigte E-Mail-Adresse lautet"
     label: "Neue persönliche E-Mail-Adresse"
     cta: "E-Mail bearbeiten"
@@ -775,8 +778,8 @@ email:
     validated: "E-Mail bestätigt!"
     validated_ok: "Danke, jetzt kannst du alle Zahlungsfunktionen, Nachrichtenweiterleitung usw. nutzen."
   newvalidate:
-    title: "Bestätige deine E-Mail-Adresse"
-    subtitle: "Folge den Anweisungen, die an folgende Adresse gesendet wurden:"
+    title: "Wir haben dir eine E-Mail gesendet"
+    subtitle: "Um deine E-Mail-Adresse zu bestätigen, folge den Anweisungen der E-Mail an"
     link: "Ist sie nicht korrekt?"
     countdowntext: "Eine neue E-Mail anfordern in "
     buttonlabelsent: "E-Mail gesendet"
