--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -2021,6 +2021,12 @@ services:
   disableAllMsg: "Bedenke, dass du nur von Diensten angeschrieben wirst, die tatsächlich über persönliche Informationen verfügen, die sie dir mitteilen möchten. Du wirst keine Spam-Mitteilungen erhalten. Wenn du alle Dienste deaktivierst, können diese dich nicht mehr über IO kontaktieren (bis du sie wieder aktivierst). Du kannst die Dienste weiterhin über andere Kanäle nutzen (Schalter, Website usw.)."
   close: "Schließen"
   emptyListMessage: "Zurzeit sind keine Dienste verfügbar, zum Aktualisieren ziehe auf dem Bildschirm nach unten"
+  details:
+    failure:
+      title: "Es liegt ein vorübergehendes Problem vor, bitte versuche es erneut"
+      subtitle: "Wir rufen die Details des Dienstes ab"
+      back: "Zurück"
+      retry: "Erneut versuchen"
 serviceDetail:
   fiscalCode: "Steuernummer Körperschaft"
   fiscalCodeAccessibility: "Steuernummer Körperschaft"
