--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -735,6 +735,7 @@ email:
     emailAlreadyTaken:
       title: "Deine E-Mail-Adresse ändern"
       subtitleStart: "Deine E-Mail-Adresse"
+      subtitleEnd: "wird bereits auf IO verwendet, du musst eine andere eingeben, um die App weiter nutzen zu können."
       editButton: "E-Mail-Adresse ändern"
       header:
         title: "IO konfigurieren"
