--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -1197,7 +1197,7 @@ wallet:
         primaryAction: "Schließen"
       CANCELED_BY_USER:
         title: "Der Vorgang wurde abgebrochen"
-        subtitle: "Wenn du die Zahlungsaufforderung bezahlen willst, warte ein paar Minuten, bevor du es erneut versuchst."
+        subtitle: ""
         primaryAction: "Schließen"
       INVALID_SESSION:
         title: "Es ist ein unerwarteter Fehler aufgetreten"
@@ -1708,7 +1708,7 @@ wallet:
         subtitle: "Weitere Informationen erhältst du bei deiner Bank."
       CANCELED_BY_USER:
         title: "Der Vorgang wurde abgebrochen"
-        subtitle: "Es wurde kein Betrag abgebucht."
+        subtitle: "Wenn du die Zahlungsaufforderung bezahlen willst, warte ein paar Minuten, bevor du es erneut versuchst."
       EXCESSIVE_AMOUNT:
         title: "Autorisierung verweigert"
         subtitle: "Es wurde kein Betrag abgebucht.\nDu hast wahrscheinlich die Obergrenze deiner Zahlungsmethode überschritten."
