chore: [IOPID-1502], [IOPID-1459] New DS on idp selection page  (#5676)
## Short description
Add new DS on idp selection page and add random order of idps

## List of changes proposed in this pull request
- Added new DS 
- create function to order randomly the idps list
- change api url from list.json to list2.json (IOPID-1459)

## Test
### E2E
>[!Tip]
>[![Run e2e
tests](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml/badge.svg?branch=IOPID-1502-ds-onboarding-idp-selection)](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml)

### A11Y
<p>

| 🍏 A11Y iOS 🍏 | 🤖 A11Y Android 🤖 |
| - | - | 
| <video
src="https://github.com/pagopa/io-app/assets/83651704/b3d4c49e-4b43-4bc9-9125-7dd9f7d6c2c3"
/> | <video
src="https://github.com/pagopa/io-app/assets/83651704/5737e119-2129-4175-8b92-2d3dc342a3e8"
/> |

</p>

## How to test
Run the application and select SPID as authentication method.

---------

Co-authored-by: mariateresaventura <90319761+mariateresaventura@users.noreply.github.com>
Co-authored-by: Fabio Bombardi <16268789+shadowsheep1@users.noreply.github.com>

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -270,7 +270,7 @@ startup:
     title: Startup problems?
 login:
   expiration_info: For security reasons, you’ll need to sign in again with CIE or SPID every 30 days.
-  expiration_info_FL: For security reasons, you’ll need to sign in again with CIE or SPID yearly.
+  expiration_info_FL: For security reasons, you’ll need to sign in using SPID or CIE once a year.
   biometric_info: To sign in, you'll only need to enter your unlock code or, if enabled, use your fingerprint or face.
 inbox:
   enableButton: Enable Inbox
