feat: add discovery info screen

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2974,6 +2974,10 @@ features:
       status:
         failure: FALLITA
         success: ""
+  itWallet:
+    discovery:
+      title: Inizia dalla tua Identità Digitale
+      content: "## Inizia dalla tua Identità Digitale\nUsa le credenziali SPID o CIE per aggiungere la tua Identità Digitale al Portafoglio. **È un passaggio necessario per aggiungere i tuoi documenti digitali** (ad esempio la patente di guida) in modo sicuro.\n### Utile da sapere \nIn futuro potrai usare l’Identità Digitale salvata nel Portafoglio per identificarti tramite la funzionalità IT Wallet. \n\nPer maggiori informazioni, leggi l’[informativa Privacy]() e i [Termini e Condizioni d’uso]()"
 webView:
   error:
     missingParams: Not all information necessary to access this page are available
