chore(Cross): [IOAPPX-278] Add privacy manifest for iOS (#5679)
## Short description
This PR adds a [privacy
manifest](https://developer.apple.com/documentation/bundleresources/privacy_manifest_files)
file to iOS as required by Apple based on the one provided by [React
Native](https://github.com/facebook/react-native/commit/520d120375c6b24bc161adea4f48d76537a34abc).

## List of changes proposed in this pull request
- Adds `PrivacyInfo.xcprivacy` according to our [internal
documentation](https://pagopa.atlassian.net/wiki/spaces/IOAPP/pages/999653377/Creazione+del+Privacy+Manifest+per+iOS)
on the matter;
- Adds the information regarding the available storage in the Zendesk
permissions screen on iOS. This is needed since we use it for an
optional bug report and thus it must be shown to the user:

> 7D9E.1
Declare this reason to include disk space information in an optional bug
report that the person using the device chooses to submit. The disk
space information must be prominently displayed to the person as part of
the report.
Information accessed for this reason, or any derived information, may be
sent off-device only after the user affirmatively chooses to submit the
specific bug report including disk space information, and only for the
purpose of investigating or responding to the bug report.

<details>
<summary>Preview</summary>
<img
src="https://github.com/pagopa/io-app/assets/12371664/75c378a4-c988-4d4f-8d27-99a4bad30c9a"
height="500">
</details>

## How to test
You can test the new label by opening a new zendesk request and checking
the permissions list.
The privacy manifest can be checked statically.

---------

Co-authored-by: Fabio Bombardi <16268789+shadowsheep1@users.noreply.github.com>

--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -3009,7 +3009,8 @@ support:
     navigationData: "Dati di navigazione in app IO"
     navigationDataValue: "Come ad esempio l’ultima schermata o messaggio visualizzato in app IO"
     devicePerformance: "Performance del dispositivo"
-    devicePerformanceData: "Livello di memoria e batteria"
+    devicePerformanceDataAndroid: "Livello di memoria e batteria"
+    devicePerformanceDataiOS: "Livello di memoria ({{storage}}) e batteria"
     stock: "Dati dell’avviso di pagamento"
     stockValue: "Incluso l’errore che hai appena ricevuto"
     card: "Dati del metodo di pagamento"
