--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -3534,6 +3534,8 @@ unsupportedDevice:
   cta:
     faq: "Come mai?"
 fastLogin:
+  loadingScreen:
+    title: "Ti stiamo autenticando"
   userInteraction:
     sessionExpired:
       noPin:
