--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2815,6 +2815,8 @@ features:
       infoSection:
         title: Informazioni sulla notifica
         iun: Codice IUN
+        iunAccessibility: Codice IUN, copia
+        iunSectionTitle: Notifica
       timeline:
         title: STATO DELLA NOTIFICA
         status:
