--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2095,7 +2095,7 @@ services:
       fiscalCode: "Organization's fiscal code"
       address: "Address"
       serviceId: "Service ID"
-    tosAndPrivacy: 
+    tosAndPrivacy:
       title: "Terms of use and Privacy"
       tosLink: "Terms and conditions"
       privacyLink: "Privacy information"
@@ -2965,6 +2965,8 @@ features:
       banner:
         content: Aggiungi al portafoglio un metodo di pagamento, così non dovrai inserire ogni volta i dati.
         action: Aggiungi un metodo
+      status:
+        expired: Scaduta
     transactions:
       title: Storico operazioni
       button: Vedi tutte
