chore: [IOBP-564] Update payment's validation failure mapping (#5694)
> [!WARNING]
> This PR depends on
https://github.com/pagopa/io-dev-api-server/pull/368

## Short description
This PR updates the pagoPA API definitions to update the payment's
verification/validation failures mappings

## List of changes proposed in this pull request
- Updated pagoPA API definitions
- Updated `WalletPaymentFailure` type
- Added missing mappings in payment's failure screen

## How to test
Checkout [this PR](https://github.com/pagopa/io-dev-api-server/pull/368)
on the `io-dev-api-server`.
Add the following piece of configuration in the` config.json` file and
play around with fault category codes, trying to reproduce the error
screens.

```json
 "features": {
    "wallet": {
      "verificationFailure": {
        "faultCodeCategory": "PAYMENT_UNKNOWN",
        "faultCodeDetail": "PAA_PAGAMENTO_SCONOSCIUTO"
      }
    }
  }
  ```

## Preview

https://github.com/pagopa/io-app/assets/6160324/7efaee4f-cb79-46ba-99a6-f62d25fa40fe

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -1711,7 +1711,7 @@ wallet:
     failure:
       PAYMENT_UNAVAILABLE:
         title: "C’è un problema tecnico con questo avviso"
-      PAYMENT_UNKNOWN:
+      PAYMENT_DATA_ERROR:
         title: "I dati dell’avviso non sono corretti"
       DOMAIN_UNKNOWN:
         title: "L’Ente Creditore sta avendo problemi nella risposta"
@@ -1730,7 +1730,7 @@ wallet:
       GENERIC_ERROR:
         title: "Si è verificato un errore imprevisto"
         subtitle: "Riprova, oppure contatta l’assistenza."
-      PAA_PAGAMENTO_SCONOSCIUTO:
+      PAYMENT_UNKNOWN:
         title: "Non riusciamo a trovare l’avviso"
         subtitle: "L’avviso potrebbe essere stato già pagato. Per ricevere assistenza, contatta l’Ente Creditore che lo ha emesso."
     outcome:
