--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2820,7 +2820,7 @@ features:
       timeline:
         goToSend: "Accedi a SEND"
         menuTitle: Stato della notifica
-        newInfo: "Per vedere maggiori dettagli e le ricevute e le attestazioni opponibili a terzi, accedi alla versione web"
+        newInfo: "Accedi alla versione web per vedere maggiori dettagli, le ricevute e le attestazioni opponibili a terzi."
         title: STATO DELLA NOTIFICA
         status:
           ACCEPTED: Depositata
