--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -2073,6 +2073,9 @@ services:
   disableAllMsg: "Ricorda che su IO ti scriveranno solo i servizi che effettivamente hanno qualche informazione personalizzata da comunicarti. Non riceverai messaggi di spam. Se disattivi tutti i servizi, questi non potranno più contattarti tramite IO (finché non li riattiverai). Potrai continuare a fruire i servizi attraverso altri canali (sportello, sito, etc.)"
   close: Chiudi
   emptyListMessage: Non ci sono servizi disponibili al momento, trascina in basso per aggiornare
+  home:
+    institutions:
+      title: Nazionali
   details:
     failure:
       title: "C'è un problema temporaneo, riprova"
