--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2073,6 +2073,9 @@ services:
   disableAllMsg: "Remember, on IO you will receive messages only from services having some personalized information to communicate to you. You will not receive spam messages. If you disable all the services, they can no longer contact you through the app (until you enable it again). You can use the services through other channels (front office, website, etc.)"
   close: Close
   emptyListMessage: There are no services available at this time, pull down to refresh
+  home:
+    institutions:
+      title: National
   details:
     failure:
       title: "There is a temporary problem. Please try again"
