--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2172,11 +2172,11 @@ openMaps:
 genericError: An error occurred
 titleUpdateApp: Update IO!
 msgErrorUpdateApp: "An error occurred while opening the app store"
-messageUpdateApp: "IO often introduces small improvements and new features: to continue using the app you need to update it to the latest version."
+messageUpdateApp: "IO introduce spesso piccole migliorie e nuove funzioni: per continuare a usare l'app è necessario aggiornarla all'ultima versione."
 titleUpdateAppAlert: To continue, update IO
 messageUpdateAppAlert: A new release of IO is now available on {{storeName}}. To start using this new feature, please download the update.
 openStore: Open {{storeName}}
-btnUpdateApp: Update the IO app
+btnUpdateApp: Aggiorna l'app
 systemsOff:
   title: Unable to start IO
   closeApp: close the application and try again
