--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -2172,11 +2172,11 @@ openMaps:
 genericError: Si è verificato un errore
 titleUpdateApp: Aggiorna IO!
 msgErrorUpdateApp: "Si è verificato un errore durante l'apertura dello store delle app"
-messageUpdateApp: "IO introduce spesso piccole migliorie e nuove funzioni: per continuare ad usare l'app è necessario aggiornarla all'ultima versione."
+messageUpdateApp: "IO introduce spesso piccole migliorie e nuove funzioni: per continuare a usare l'app è necessario aggiornarla all'ultima versione."
 titleUpdateAppAlert: Per continuare, aggiorna IO
 messageUpdateAppAlert: È disponibile una nuova versione di IO su {{storeName}}, scaricala subito per utilizzare questa funzionalità.
 openStore: Apri {{storeName}}
-btnUpdateApp: Aggiorna l'app IO
+btnUpdateApp: Aggiorna l'app
 systemsOff:
   title: Impossibile usare IO
   closeApp: chiudi l'applicazione e riprova
