--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -379,7 +379,7 @@ profile:
         title: Informativa Privacy e Termini e condizioni d'uso
         description: Consulta l’Informativa Privacy e i Termini e condizioni d’uso di IO
         header: Informativa sul trattamento dei dati personali degli utenti dell'app IO
-        updated: Abbiamo aggiornato la nostra Informativa e i Termini e condizioni d'uso
+        updated: Abbiamo aggiornato la nostra Informativa e i Termini e condizioni d’uso.
         infobox: È necessario prendere visione e accettare l'Informativa ed i Termini e condizioni d'uso
         contextualHelpTitlePolicy: Informativa sul trattamento dei dati personali e condizioni d'uso del servizio
         contextualHelpContentPolicy: !include profile/profile_privacy_policy.md
@@ -852,7 +852,7 @@ onboarding:
   tos:
     headerTitle: Configura IO
     accept: Accetta e continua
-    error: Errore nel caricamento
+    error: Non siamo riusciti a caricare l’Informativa privacy e i Termini e condizioni
     alert:
       title: Attenzione
       message: Devi leggere tutto il contenuto dei Termini di servizio e Privacy policy per continuare.
