feat: [IOPID-1537] Integrate new DS on Unsupported Device Screen (#5697)
## Short description
Integrate new DS and change copy on Unsupported Device Screen

## Test
### E2E
> [!Tip]
> [![Run e2e
tests](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml/badge.svg?branch=IOPID-1537-ds-modal-app-unsupported-device)](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml)
### Video
  |  iOS |  Android  |
  | - | - | 
| <video
src="https://github.com/pagopa/io-app/assets/94987118/c78fef80-f871-496d-9248-e30e2ffb5478"
/> | <video
src="https://github.com/pagopa/io-app/assets/94987118/aac4dc1b-9b34-4c2a-a686-1cead7c99160"
/> |

## How to test
### From an unsupported device:
Open the app, then click on the CTA, it should redirect you to an
[IO-italia](https://io.italia.it/faq/#n1_11)'s FAQ
### From simulator(iOS only) or supported device in debug mode
In `ts/screens/modal/RootModal.tsx` component invert the
`!props.isDeviceSupported` condition to display the
UnsupportedDeviceScreen, then click on the CTA, it should redirect you
to an [IO-italia](https://io.italia.it/faq/#n1_11)'s FAQ
> [!Note] 
> Android simulator can be test without to invert the condition

---------

Co-authored-by: Fabio Bombardi <16268789+shadowsheep1@users.noreply.github.com>
Co-authored-by: mariateresaventura <90319761+mariateresaventura@users.noreply.github.com>

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -3539,7 +3539,7 @@ barcodeScan:
 unsupportedDevice:
   warning: "Your device may soon no longer be compatible with the IO app."
   title: "This device is no longer compatible with IO"
-  subtitle: "Make sure your operating system is updated to the latest version. If it already is, to continue using IO you will have to log in from another device."
+  subtitle: "Make sure your operating system is updated to the latest version. If it is already updated, you will need to log in from a different device to continue using IO."
   cta:
     faq: "Learn more"
 fastLogin:
