--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -877,6 +877,9 @@ onboarding:
   alert:
     title: Vuoi davvero uscire da IO?
     description: Dovrai fare nuovamente il login per continuare ad usare l'app
+  exitAlert: 
+    title: Vuoi uscire da IO?
+    description: Dovrai entrare di nuovo con SPID o CIE per usare l’app.
   biometric:
     headerTitle: Configura IO
     available:
